--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     <header>
         <nav class="container-header">
 
-            <img class="logo" src="/img/vectorstock_31362787.png" alt="logo">
-
-            <nav class="links">
-                <ul>
+            <a href="#">
+                <img class="logo" src="/img/vectorstock_31362787.png" alt="logo">
+            </a>
+            <nav>
+                <ul class="links">
                     <li><a href="#eventos">Catering para Eventos</a></li>
                     <li><a href="#menu">Nuestro Menú</a></li>
                     <li><a href="#nosotros">Quienes Somos</a></li>
                 </ul>
             </nav>
+                
+            <a href="#" class="button">Contáctanos</a>
 
-            <button>
-                <a href="/pages/contact.html">Contactanos</a>
-            </button>
             
         </nav>
     </header>
